# GM2SlowToymc

./: .gitignore  CMakeLists.txt  README.md  main.cpp
GSSim/include/: GSController.hh  GSSimulator.hh  MCMuon.hh  MCPositron.hh  MuonGenerator.hh  PositronGenerator.hh
GSSim/src/: GSController.cpp  GSSimulator.cpp  MCMuon.cpp  MCPositron.cpp  MuonGenerator.cpp  PositronGenerator.cpp
data/: lostmuon_run4all.root
script/: config.txt  generate_wiggle.ipynb  job.submit  test.ipynb
